[package]
name = "multiboot"
version = "0.2.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Dan Schatzberg <schatzberg.dan@gmail.com>"]

description = "Library to access multiboot structures."
homepage = "https://github.com/gz/rust-multiboot"
repository = "https://github.com/gz/rust-multiboot"
documentation = "http://gz.github.io/rust-multiboot/multiboot/"

readme = "README.md"
keywords = ["multiboot", "kernel", "os", "bootloader", "x86"]
license = "MIT"
